These all had duplicate attributes in abbrev lists, so we have new baseline values 	modified:   baddie1/incorrectnest2.base 	modified:   baselines/ossfuzz371659894.base 	modified:   baselines/ossfuzz42536144.base 	modified:   baselines/ossfuzz56474.base 	modified:   baselines/ossfuzz56492.base 	modified:   baselines/ossfuzz56958.base 	modified:   baselines/ossfuzz57107.base 	modified:   baselines/ossfuzz57292.base 	modified:   baselines/ossfuzz57300.base 	modified:   baselines/ossfuzz57766.base 	modified:   baselines/ossfuzz57887.base 	modified:   baselines/ossfuzz59699.base 	modified:   baselines/ossfuzz59775.base 	modified:   baselines/ossfuzz62547.base 	modified:   baselines/ossfuzz67490.base 	modified:   baselines/ossfuzz70753.base 	modified:   baselines/ossfuzz_42536144.base 	modified:   debugfissionb/peexe64.base
Added explanation.
	modified:   cristi3/README
Fixed a bug in one test run
	modified:   debugfissionb/runtest.sh

--- a/cristi3/README
+++ b/cristi3/README
@@ -10,3 +10,24 @@ Provided by Cristi Vlasceanu Oct 2007
 
 The source must be compiled -g3 to generate macinfo to see
 the problem.
+
+This has a few DW_AT duplications.
+Discovered 27 Dec 2024.
+
+*** DWARF CHECK: Duplicated attribute : DW_AT_byte_size ***
+
+CU Name = foo.cpp   
+CU Producer = GNU C++ 4.1.1 20060724 (prerelease) (4.1.1-3mdk)
+DIE OFF = 0x00000533 GOFF = 0x00000649, Low PC = unknown   , High PC = unknown
+                        DW_AT_byte_size             4
+
+*** DWARF CHECK: Duplicated attribute : DW_AT_decl_file ***
+
+CU Name = foo.cpp
+CU Producer = GNU C++ 4.1.1 20060724 (prerelease) (4.1.1-3mdk)
+DIE OFF = 0x00000533 GOFF = 0x00000649, Low PC = unknown   , High PC = unknown
+                        DW_AT_decl_file             0x0000006d /usr/lib/gcc/x86_64-mandriva-linux-gnu/4.1.1/../../../../include/c++/4.1.1/limits
+
+*** DWARF CHECK: Duplicated attribute : DW_AT_decl_line ***
+
+
