Description of the test 	modified:   ossfuzz446735540/README

--- a/ossfuzz446735540/README
+++ b/ossfuzz446735540/README
@@ -9,6 +9,8 @@ testcase: ossfuzz446735540 fuzz_aranges-4698786724380672
 
 Timed out as reading object was very slow.
 
+The set of sizes and count for object segment names
+was unreasonable. Now we notice and return an error.
 
 
 part of stack trace at cancellation:
